[package]
name = "forja-wasm"
version = "0.7.0"
edition = "2021"
description = "Forja compiler core compiled to WebAssembly"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"

forja = { path = "../.." }

[package.metadata]
wasm-opt = false

[profile.release]
opt-level = "s"
lto = true
strip = true
